themes/corvaglia/assets/css/main.css
body {
  color: #222;
  font-family: "Google Sans", sans-serif;
  line-height: 1.5;
  margin: 1rem;
  max-width: 768px;
  margin: auto;
  padding: 0 2rem;
}

header {
  border-bottom: 1px solid #222;
  margin-bottom: 1rem;
}

nav ul {
  list-style: none;
  padding: 0;
  display: flex;
  gap: 1rem;
}

nav ul ul {
  flex-direction: column;
}

nav a {
  display: inline-block;
}

footer {
  border-top: 1px solid #222;
  margin-top: 1rem;
}

a {
  color: #222;
  text-decoration: underline;
}

code {
  font-family: "Google Sans Code", monospace;
}

main img {
  display: block;
  max-width: min(100%, 300px);
  height: auto;
  margin: 1rem auto;
}

figure {
  margin: 1rem 0;
}

figcaption {
  color: #555;
  font-size: 0.9rem;
  text-align: center;
  margin-top: 0.5rem;
}

